Add snackbar and logo img

--- a/src/components/subscribe_form/SubscribeForm.astro
+++ b/src/components/subscribe_form/SubscribeForm.astro
@@ -12,4 +12,7 @@
   </button>
 </form>
 
+<div id="snackbar" class="hidden fixed top-5 left-1/2 transform -translate-x-1/2 min-w-[250px] p-4 rounded-md text-white text-center opacity-0 transition-opacity duration-300">
+</div>
+
 <script src="./subscribeForm.ts"></script>
