--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,9 +14,9 @@ import SubscribeForm from '../components/subscribe_form/SubscribeForm.astro';
       <div class="container max-w-6xl mx-auto">
         <div class="grid gap-6 lg:grid-cols-2 lg:gap-12">
           <div class="flex flex-col justify-center space-y-4">
-            <div class="space-y-2">
+            <div class="space-y-3">
               <h1 class="text-3xl font-bold tracking-tighter sm:text-5xl xl:text-6xl/none">
-                Level Up Your Coding Skills with SomoBytes
+                Level Up Your Coding Skills with SomosBytes
               </h1>
               <p class="max-w-[600px] text-purple-100 md:text-xl">
                 Dive into engaging tutorials, expert tips, and the latest in software engineering. Join our community of passionate developers!
@@ -30,8 +30,8 @@ import SubscribeForm from '../components/subscribe_form/SubscribeForm.astro';
             </div>
           </div>
           <div class="flex justify-center items-center">
-            <img src="/placeholder.svg?height=400&width=400" alt="Content Creator"
-                 class="rounded-full object-cover border-4 border-white shadow-2xl w-64 h-64 sm:w-80 sm:h-80">
+            <img src="logo-sb.png" alt="Content Creator"
+                 class="rounded-full object-cover shadow-2xl w-64 h-64 sm:w-80 sm:h-80">
           </div>
         </div>
       </div>
