--- a/src/components/subscribe_form/SubscribeForm.astro
+++ b/src/components/subscribe_form/SubscribeForm.astro
@@ -4,11 +4,11 @@
 ---
 
 <form id="subscribe-form" class="flex flex-col space-y-2">
-  <input type="email" id="email" placeholder="Enter your email" required
+  <input type="email" id="email" placeholder="Solo quiero tu email, el telefono en otro momento" required
     class="w-full px-3 py-2 bg-white/10 border border-white/20 rounded-md placeholder-white/50 focus:outline-none focus:ring-2 focus:ring-white/50" />
   <button type="submit"
     class="w-full px-3 py-2 bg-white text-primary font-bold rounded-md hover:bg-purple-100 transition-colors">
-    Subscribe Now
+    Impulsate
   </button>
 </form>
 
