Add some padding and the privacy policy to de landing page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,8 +14,8 @@ import SubscribeForm from '../components/subscribe_form/SubscribeForm.astro';
       <div class="container max-w-10xl mx-auto">
         <div class="grid gap-6 lg:grid-cols-2 lg:gap-12">
           <div class="flex flex-col justify-center space-y-4">
-            <div class="space-y-3">
-              <h1 class="text-3xl font-bold tracking-tighter sm:text-5xl xl:text-6xl/none">  
+            <div class="space-y-3 py-4">
+              <h1 class="text-3xl font-bold tracking-tighter sm:text-5xl xl:text-6xl/none pb-4">  
                 Sube de nivel y deja de llorar con lo de siempre.
               </h1>
               <p class="max-w-[600px] text-purple-100 md:text-xl">
@@ -27,14 +27,12 @@ import SubscribeForm from '../components/subscribe_form/SubscribeForm.astro';
               </p>
               <p class="max-w-[600px] text-purple-100 md:text-xl">
                 Unete, <b>letter que se pierde... no vuelve</b>.
-                <br/> Estamos esperando a alguien como tú.
+                <br/> 
+                Estamos esperando a alguien como tú.
               </p>
             </div>
-            <div class="w-full max-w-sm space-y-2">
+            <div class="w-full max-w-sm space-y-2 my-8">
               <SubscribeForm />
-              <p class="text-sm text-purple-100">
-                Ya somos muchos Bytes en la Matrix.
-              </p>
             </div>
           </div>
           <div class="flex justify-center items-center">
